--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^1.4.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/fluent-ffmpeg": "^2.1.20",
+    "fluent-ffmpeg": "^2.1.2",
     "got": "^11.8.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sanitize-filename": "^1.6.3",
     "ytdl-core": "^4.11.0"
   },
   "devDependencies": {
