--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^3.0.0",
     "@types/fluent-ffmpeg": "^2.1.20",
     "fluent-ffmpeg": "^2.1.2",
     "got": "^11.8.5",
